--- a/package.json
+++ b/package.json
@@ -6,26 +6,30 @@
     "build": "vite build",
     "dev": "vite",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "vitest --project=storybook"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-a11y": "^10.1.0",
+    "@storybook/addon-docs": "^10.1.0",
+    "@storybook/addon-vitest": "^10.1.0",
+    "@storybook/web-components-vite": "^10.1.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitest/browser-playwright": "^4.0.14",
+    "@vitest/coverage-v8": "^4.0.14",
     "axios": "^1.11.0",
     "concurrently": "^9.0.1",
     "laravel-vite-plugin": "^2.0.0",
+    "playwright": "^1.57.0",
+    "shadow-dom-testing-library": "^1.13.1",
+    "storybook": "^10.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.9.3",
     "vite": "^7.0.7",
-    "storybook": "^10.1.0",
-    "@storybook/web-components-vite": "^10.1.0",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.0",
-    "@storybook/addon-a11y": "^10.1.0",
-    "@storybook/addon-docs": "^10.1.0",
-    "vitest": "^4.0.14",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.14",
-    "@vitest/coverage-v8": "^4.0.14"
+    "vitest": "^4.0.14"
   },
   "dependencies": {
     "lit": "^3.3.1"
