--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "laravel-lit-storybook",
   "$schema": "https://www.schemastore.org/package.json",
   "private": true,
   "type": "module",
