fix: Add Laravel environment bypass to Storybook CI tests and reformat Vite plugins.

--- a/.github/workflows/storybook_test.yml
+++ b/.github/workflows/storybook_test.yml
@@ -25,3 +25,5 @@ jobs:
 
       - name: Run Storybook tests
         run: npm run test-storybook
+        env:
+            LARAVEL_BYPASS_ENV_CHECK: 1
